# linkedin-post-exporter

./: .gitignore  .gitmodules  License  content.js  manifest.json  popup.html  popup.js
backend/: .env.example  README.md  main.py  pyproject.toml
backend/app/: README.md  config.py  main.py
backend/app/database/: README.md  connection.py
backend/app/models/: README.md  schemas.py
backend/app/routes/: README.md  posts.py
backend/app/services/: README.md  email.py  email_job.py  storage.py
backend/app/storage/: README.md  csv_storage.py  db_storage.py
backend/data/: README.md  email_status.csv  linkedin_posts.csv
backend/resume/: README.md
backend/sent-mails/: README.md  sent-mails.csv
backend/template/: README.md  email_body.txt
chrome-extension/: README.md  background.js  config.js  content.js  manifest.json  popup.css  popup.html
db/: README.md  docker-compose.yaml
old_files/backend_old/: main.py  pyproject.toml
old_files/backend_old/app/: config.py  main.py
old_files/backend_old/app/models/: schemas.py
old_files/backend_old/app/routes/: posts.py
old_files/backend_old/app/storage/: csv_storage.py
old_files/test-api_old/: main.py  pyproject.toml
test-api/: README.md  pyproject.toml
