[project]
name = "backend"
version = "0.1.0"
description = "FastAPI backend for LinkedIn Post Exporter - handles scraped data storage and email status tracking"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi[standard]>=0.129.0",
    "psycopg2-binary>=2.9.10",
    "sqlalchemy>=2.0.40",
]
